<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    Titlurile fragmentelor -->
    <string name="app_name">Global Market Pulse</string>
    <string name="title_market_trends">Reddit Market Trends</string>
    <string name="title_exchange_rates">Exchange Rates</string>
    <string name="title_business_news">Business News</string>

    <!--    Meniul de sus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>

    <!--    Meniuri de jos -->
    <string name="menu_market_trends">Market Trends</string>
    <string name="menu_exchange_rates">Exchange Rates</string>
    <string name="menu_business_news">Business News</string>

    <!--    Termeni si conditii -->
    <string name="title_terms_conditions">Termeni si Conditii</string>
    <string name="terms_conditions_text">
        <b><u>IMPORTANT:</u></b>\n\n
        Please read the following <b>TERMS AND CONDITIONS</b> carefully before using the application.\n
        \n
        1. This application is <b>STRICTLY</b> for educational purposes and must not be used for any real-world financial decision-making.\n\n
        2. We are NOT financial advisors, nor do we provide any financial, investment, or professional consultancy services.\n\n
        3. The data provided in this application is solely for demonstration and informational purposes. It may be incomplete, outdated, or inaccurate.\n\n
        4. UNDER NO CIRCUMSTANCES should you use this application to make financial investments, trades, or other monetary decisions. Doing so is entirely at your own risk.\n\n
        5. By continuing, you acknowledge that:\n\n
           - The creators and developers of this application are not liable for any financial losses or damages incurred.\n
           - You have read and fully understood these terms and agree to abide by them.\n
        \n\n
        If you do not agree to these terms, you MUST exit the application immediately.
        \n\n\n
    </string>
    <string name="terms_checkbox">Accept Terms and Conditions</string>
    <string name="terms_accept">OK</string>
    <string name="terms_decline">Exit</string>


    <!--    Reddit Market Trends -->
    <string name="ticker">Ticker</string>
    <string name="sentiment">Sentiment: %1$s</string>
    <string name="number_of_comments">Number of comments: %1$d</string>
    <string name="sentiment_score">Sentiment score: %1$s</string>

</resources>